--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     <option value="21:00">21:00</option>
                 </select>
                 <div id="reservation-error" class="error"></div>
-                <button type="submit">Rezervasyon Yap</button>
+               <button class="button">Rezervasyon Yap</button>
+
             </form>
         </div>
     </section>
